<resources>
    <string name="app_name">트라이브 과제</string>
    <string name="tab_collection">컬렉션</string>
    <string name="tab_up_coming">업커밍</string>
    <string name="tab_subscription">구독 정보</string>
    <string name="tab_account">계정 정보</string>
    <string name="filter">필터</string>
    <string name="all">모두</string>
    <string name="select">선택</string>
    <string name="reset_filter">필터 초기화</string>
    <string name="show_car">자동차 보기</string>
    <string name="filter_update">업데이트 순</string>
    <string name="filter_low_price">낮은 가격 순</string>
    <string name="filter_high_price">높은 가격 순</string>
    <string name="car_filter_hint">어떤 차를 찾으세요?</string>
    <string name="car_filter_self_hint">직접 입력하기</string>
    <string name="confirm">확인</string>
    <string name="network_error">네트워크에 연결 되지 않았습니다.\n네트워크 상태를 확인 해주세요.</string>
    <string name="dot"><![CDATA[·]]></string>
    <string name="sold_out">Sold Out</string>
</resources>