<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/collection"
        android:enabled="true"
        android:title="@string/tab_collection"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/up_coming"
        android:enabled="true"
        android:title="@string/tab_up_coming"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/subscription"
        android:enabled="true"
        android:title="@string/tab_subscription"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/account"
        android:enabled="true"
        android:title="@string/tab_account"
        app:showAsAction="ifRoom" />

</menu>