<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/collection_car_filter_bottom_sheet_bg"
    app:behavior_hideable="true"
    app:behavior_peekHeight="50dp"
    android:padding="20dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <EditText
        android:id="@+id/et_car_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:background="@drawable/shape_rectangle_5_soft_pale_grey"
        android:hint="@string/car_filter_self_hint"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:padding="10dp"
        android:textSize="15sp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/rl_filter_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/et_car_filter">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/reset_filter"
            android:textColor="@color/purple_700"
            android:textSize="15sp" />
    </RelativeLayout>

    <View
        android:id="@+id/v_line"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/rl_filter_box"
        android:background="@color/grey" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_collection_car_filter_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/v_line" />

    <Button
        android:id="@+id/bt_show_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/rv_collection_car_filter_list"
        android:background="@drawable/shape_rectangle_5_soft_dark_grey"/>

</androidx.constraintlayout.widget.ConstraintLayout>